Fixing sponsor alignment on mobile.

--- a/docroot/sites/all/themes/fldc14/css/fldc14.styles.css
+++ b/docroot/sites/all/themes/fldc14/css/fldc14.styles.css
@@ -2427,7 +2427,7 @@ html.js .form-autocomplete {
   text-align: center; }
 /* line 17, ../sass/components/_sponsors.scss */
 .view-sponsors .wrap {
-  margin: 0 10px 20px 10px;
+  margin-bottom: 20px;
   padding: 20px;
   list-style: none;
   display: inline-block;
