--- a/docroot/sites/all/themes/fldc14/sass/components/_sponsors.scss
+++ b/docroot/sites/all/themes/fldc14/sass/components/_sponsors.scss
@@ -15,7 +15,7 @@
     text-align: center;
   }
   .wrap {
-    margin: 0 10px 20px 10px;
+    margin-bottom: 20px;
     padding: 20px;
     list-style: none;
     display: inline-block;
